fixed spacing issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,7 @@
     border-radius: 25px;
 }
 
-input, select {
+.inputStyle {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
