--- a/client/src/styles/Goals.css
+++ b/client/src/styles/Goals.css
@@ -42,7 +42,7 @@
 .textBox {
     resize: none;
     width: 130px;
-    height: 75px;
+    height: 65px;
     margin: 20px;
     margin-right: 5px;
     font-family: Arial, Helvetica, sans-serif;
